Fixed more z-indexes

--- a/css/agency.css
+++ b/css/agency.css
@@ -522,6 +522,9 @@ header.masthead::after {
 .fixed-top {
   z-index: 3; }
 
+.modal {
+  z-index: 4; }
+
 .modal-backdrop.fade.show {
   z-index: 3; }
 
@@ -530,7 +533,7 @@ header.masthead::after {
   width: 100vw;
   height: 100vh;
   top: 0px;
-  z-index: 3;
+  z-index: 4;
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.8);
