--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,10 @@ header.masthead {
   z-index: 3;
 }
 
+.modal {
+  z-index: 4;
+}
+
 .modal-backdrop.fade.show {
   z-index: 3;
 }
@@ -28,7 +32,7 @@ header.masthead {
   width: 100vw;
   height: 100vh;
   top: 0px;
-  z-index: 3;
+  z-index: 4;
 	align-items: center;
   justify-content: center;
   background-color: rgba(0,0,0,.8);
